# PlayDL

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Main.py  README-Fa.md  README.md  pyproject.toml  requirements.txt
App/: bot.py  config.py  main.py
DataBase/: mongo.py
Handlers/: __init__.py  errors.py  links.py  start.py
Services/: bootstrap.py  commands.py  converter.py  downloader.py  extract.py  jobs.py  nixfile.py  sweeper.py
Utils/: html.py  keyboards.py  progress.py  texts.py
